fixed the upload button on larger screens to be visible

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -18,7 +18,7 @@
   cursor: pointer;
 }
 
-.collapse, .collapsing{
+.collapse.in, .collapsing{
   .btn-submit-story {
       display: none;
   }
